tests/snapshots/questa__ui__snapshot_tests__confirm_delete_overlay.snap
---
source: src/ui.rs
expression: out
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Tracker │ Total 2 · Active 2 · Interview 1 · ⚠ Overdue 1 │ sort: date↓ │ [DATE]                        │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ All (2) ──────────────────────────────────────────────────┐┌ Detail ───────────────────────────────────────┐
│● #2    Northwind       Security Analyst     applied       ││#2  Northwind                                  │
│● #1    Acme Robotics   Embedded Engineer    interview   ⚠ ││Security Analyst                               │
│                                                           ││Geneva                                         │
│                                                           ││                                               │
│                                                           ││  Status     applied                           │
│                                                           ││  Applied    [DATE]  ([REL])             │
│                                                           ││                                               │
│                     ┌ Confirm delete ────────────────────────────────────────────────┐                     │
│                     │                                                                │                     │
│                     │              Permanently delete this application?              │                     │
│                     │                                                                │                     │
│                     │                 #2 Northwind — Security Analyst                │                     │
│                     │                                                                │                     │
│                     │                    y confirm · n / esc cancel                  │                     │
│                     └────────────────────────────────────────────────────────────────┘                     │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
└───────────────────────────────────────────────────────────┘└───────────────────────────────────────────────┘
  y confirm · n / esc cancel
