tests/snapshots/questa__ui__snapshot_tests__empty_state_shows_no_match_message.snap
---
source: src/ui.rs
expression: out
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Tracker │ Total 2 · Active 2 · Interview 1 · ⚠ Overdue 1 │ sort: date↓ │ [DATE]                        │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Ghosted (0) ──────────────────────────────────────────────┐┌ Detail ───────────────────────────────────────┐
│                                                           ││No applications match.                         │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
└───────────────────────────────────────────────────────────┘└───────────────────────────────────────────────┘
j/k nav 1-5 filter o sort / search s status n note ? help q quit
