tests/snapshots/questa__ui__snapshot_tests__main_screen_with_two_entries.snap
---
source: src/ui.rs
expression: out
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Tracker │ Total 2 · Active 2 · Interview 1 · ⚠ Overdue 1 │ sort: date↓ │ [DATE]                        │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ All (2) ──────────────────────────────────────────────────┐┌ Detail ───────────────────────────────────────┐
│● #2    Northwind       Security Analyst     applied       ││#2  Northwind                                  │
│● #1    Acme Robotics   Embedded Engineer    interview   ⚠ ││Security Analyst                               │
│                                                           ││Geneva                                         │
│                                                           ││                                               │
│                                                           ││  Status     applied                           │
│                                                           ││  Applied    [DATE]  ([REL])             │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
└───────────────────────────────────────────────────────────┘└───────────────────────────────────────────────┘
j/k nav 1-5 filter o sort / search s status n note ? help q quit
