tests/snapshots/questa__ui__snapshot_tests__note_input_overlay_with_text.snap
---
source: src/ui.rs
expression: out
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Tracker │ Total 2 · Active 2 · Interview 1 · ⚠ Overdue 1 │ sort: date↓ │ [DATE]                        │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ All (2) ──────────────────────────────────────────────────┐┌ Detail ───────────────────────────────────────┐
│● #2    Northwind       Security Analyst     applied       ││#2  Northwind                                  │
│● #1    Acme Robotics   Embedded Engineer    interview   ⚠ ││Security Analyst                               │
│                                                           ││Geneva                                         │
│                                                           ││                                               │
│                                                           ││  Status     applied                           │
│                                                           ││  Applied    [DATE]  ([REL])             │
│                                                           ││                                               │
│                                                           ││                                               │
│                     ┌ Add note ──────────────────────────────────────────────────────┐                     │
│                     │Date: [DATE]                                                │                     │
│                     │                                                                │                     │
│                     │> Recruiter screen passed                                       │                     │
│                     │                                                                │                     │
│                     └────────────────────────────────────────────────────────────────┘                     │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
└───────────────────────────────────────────────────────────┘└───────────────────────────────────────────────┘
note> Recruiter screen passed
