tests/snapshots/questa__ui__snapshot_tests__status_picker_overlay.snap
---
source: src/ui.rs
expression: out
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Tracker │ Total 2 · Active 2 · Interview 1 · ⚠ Overdue 1 │ sort: date↓ │ [DATE]                        │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ All (2) ──────────────────────────────────────────────────┐┌ Detail ───────────────────────────────────────┐
│● #2    Northwind       Security Analyst     applied       ││#2  Northwind                                  │
│● #1    Acme Robotics   Embedded Engineer    interview   ⚠ ││Security Analyst                               │
│                                ┌ Change status ───────────────────────────┐                                │
│                                │● applied                                 │                                │
│                                │● screening                               │plied                           │
│                                │● interview                               │26-04-30  ([REL])             │
│                                │● technical                               │                                │
│                                │● offer                                   │                                │
│                                │● accepted                                │                                │
│                                │● rejected                                │                                │
│                                │● withdrawn                               │                                │
│                                │● ghosted                                 │                                │
│                                │                                          │                                │
│                                │                                          │                                │
│                                │                                          │                                │
│                                │                                          │                                │
│                                │                                          │                                │
│                                │                                          │                                │
│                                │                                          │                                │
│                                └──────────────────────────────────────────┘                                │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
│                                                           ││                                               │
└───────────────────────────────────────────────────────────┘└───────────────────────────────────────────────┘
  j/k select  ·  enter confirm  ·  esc cancel
